--- a/src/generators/react17_antd4.0/package.json
+++ b/src/generators/react17_antd4.0/package.json
@@ -1,21 +1,28 @@
 {
   "name": "react17_antd4.0",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "@craco/craco": "^6.3.0",
+    "compression-webpack-plugin": "^9.0.0",
+    "craco-less": "^1.20.0",
+    "http-proxy-middleware": "^2.0.1",
+    "wing-dotenv": "^0.0.5"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test"
   },
   "eslintConfig": {
     "extends": [
