--- a/src/generators/react17_antd4.0/package.json
+++ b/src/generators/react17_antd4.0/package.json
@@ -9,8 +9,10 @@
     "antd": "^4.16.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "wing-use-auth": "^0.0.4"
   },
   "devDependencies": {
     "@craco/craco": "^6.3.0",
