--- a/src/generators/vue2_view-design4.0/package.json
+++ b/src/generators/vue2_view-design4.0/package.json
@@ -18,25 +18,30 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "lint-staged": "^12.1.7",
     "vue-template-compiler": "^2.6.11"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
+  "author": {
+    "name": "Robben Wadlay",
+    "email": "hb_wangzheng@163.com"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
+    "not ie <= 8",
     "not dead"
-  ]
+  ],
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "vue-cli-service lint",
+      "git add"
+    ],
+    "*.vue": [
+      "vue-cli-service lint",
+      "git add"
+    ]
+  }
 }
