modified the environments

--- a/src/generators/vue2_view-design4.0/.env.pre
+++ b/src/generators/vue2_view-design4.0/.env.pre
@@ -1,9 +1,7 @@
-VUE_APP_PAGE_SIZE = 15
-
 VUE_APP_PUBLIC_PATH = /adminota
 
 # CONSOLE SERVICE
-VUE_APP_CONSOLE_SERVICE_HOST = ''
+VUE_APP_CONSOLE_SERVICE_HOST = 
 VUE_APP_CONSOLE_SERVICE_PATH = /adminota
 
 # COMMON SERVICE
