--- a/src/generators/vue2_view-design4.0/.env.development
+++ b/src/generators/vue2_view-design4.0/.env.development
@@ -1,6 +1,4 @@
-VUE_APP_PAGE_SIZE = 15
-
-VUE_APP_PUBLIC_PATH = ''
+VUE_APP_PUBLIC_PATH = 
 
 # CONSOLE SERVICE
 VUE_APP_CONSOLE_SERVICE_HOST = http://121.41.109.132
