--- a/src/generators/vue2_view-design4.0/package.json
+++ b/src/generators/vue2_view-design4.0/package.json
@@ -17,7 +17,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "view-design": "^4.7.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.3",
+    "vuex": "^3.6.2",
+    "wing-axios": "^0.0.33"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
