--- a/src/generators/vue2_view-design4.0/package.json
+++ b/src/generators/vue2_view-design4.0/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "js-cookie": "^3.0.1",
     "view-design": "^4.7.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
